--- a/index.css
+++ b/index.css
@@ -1,53 +1,6 @@
-body {
-  color: white;
-  width: 100%;
-  height: 100%;
-  margin: 0px;
+#contentArea {
+  margin: 40px auto 40px auto;
   padding: 0px;
-} #headerArea {
-  width: 100%;
-  min-width: 900px;
-  height: 120px;
-  position: fixed;
-  box-shadow: 0px 2px 20px #000000;
-} #headerArea #logoArea {
-  width: 30%;
-  margin: 0px;
-  padding: 0px;
-  height: 120px;
-  background-color: #ad1457;
-  float: left;
-} #headerArea #menuArea {
-  width: 70%;
-  margin: 0px;
-  padding: 0px;
-  height: 120px;
-  background-color: #242424;
-  float: right;
-} #headerArea #logoArea h1 {
-  margin: 0px;
-  padding: 44px 0px 44px 0px;
-  text-align: center;
-  font-size: 32px;
-} #headerArea #menuArea #menuList {
-  list-style-type: none;
-  margin: 48px 0px 48px 30px;
-  padding: 0px;
-} #headerArea #menuArea #menuList li {
-  display: inline;
-  font-family: "Droid";
-  font-size: 24px;
-  margin: 0px;
-  padding: 0px 10px 0px 10px;
-} #headerArea #menuArea #menuList li:hover {
-  background-color: #ad1457;
-  padding-top: 28px;
-  padding-bottom: 28px;
-} #headerArea #menuArea #menuList li a {
-  display: block;
-  width: 60px;
-} #contentArea {
-  margin: 0px auto 0px auto;
-  padding: 0px;
-  width: 70%;
+  width: 800px;
+  color: black;
 }
