--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
   color: white;
+  background-color: white;
   width: 100%;
   height: 100%;
   margin: 0px;
@@ -8,7 +9,6 @@ body {
   width: 100%;
   min-width: 900px;
   height: 120px;
-  position: fixed;
   box-shadow: 0px 2px 20px #000000;
 } #headerArea #logoArea {
   width: 30%;
@@ -47,3 +47,4 @@ body {
   display: block;
   width: 60px;
 }
+
