--- a/css/main.css
+++ b/css/main.css
@@ -1,50 +1,147 @@
 body {
-  color: white;
-  background-color: white;
+  margin: 0px;
+  padding: 0px;
   width: 100%;
   height: 100%;
-  margin: 0px;
-  padding: 0px;
-} #headerArea {
-  width: 100%;
-  min-width: 900px;
-  height: 120px;
-  box-shadow: 0px 2px 20px #000000;
-} #headerArea #logoArea {
-  width: 30%;
-  margin: 0px;
-  padding: 0px;
-  height: 120px;
-  background-color: #ad1457;
-  float: left;
-} #headerArea #menuArea {
-  width: 70%;
-  margin: 0px;
-  padding: 0px;
-  height: 120px;
-  background-color: #242424;
-  float: right;
-} #headerArea #logoArea h1 {
-  margin: 0px;
-  padding: 44px 0px 44px 0px;
-  text-align: center;
-  font-size: 32px;
-} #headerArea #menuArea #menuList {
-  list-style-type: none;
-  margin: 48px 0px 48px 30px;
-  padding: 0px;
-} #headerArea #menuArea #menuList li {
-  display: inline;
-  font-family: "Droid";
-  font-size: 24px;
-  margin: 0px;
-  padding: 0px 10px 0px 10px;
-} #headerArea #menuArea #menuList li:hover {
-  background-color: #ad1457;
-  padding-top: 28px;
-  padding-bottom: 28px;
-} #headerArea #menuArea #menuList li a {
-  display: block;
-  width: 60px;
+  background-color: white;
+  color: white;
 }
 
+/* Header */
+header {
+  top: 0; /* Important for fixed header */
+  position: fixed;
+  width: 100%;
+  height: 120px;
+  box-shadow: 0px 2px 20px #000000;
+}
+
+@media (max-width: 450px) { /* Phones */
+  header {
+    position: relative;
+  }
+}
+
+header #logoArea {
+  position: fixed;
+  margin: 0px;
+  padding: 0px;
+  width: 30%;
+  height: 120px;
+  background-color: #1BBAEF;
+}
+
+@media (max-width: 450px) { /* Phones */
+  header #logoArea {
+    position: relative;
+    width: 100%;
+  }
+}
+
+header #logoArea h1 {
+  margin: 0px;
+  padding: 44px 0px;
+  text-align: center;
+  font-size: 32px;
+}
+
+header nav {
+  float: right;
+  margin: 0px;
+  padding: 0px;
+  width: 70%;
+  height: 120px;
+  background-color: #242424;
+}
+
+@media (max-width: 450px) { /* Phones */
+  header nav {
+    float: left;
+    height: 50px;
+    width: 100%;
+  }
+}
+
+header nav ul {
+  margin: 0px;
+  padding: 0px;
+  list-style-type: none;
+}
+
+header nav ul li {
+  float: left;
+  margin: 0px;
+  padding: 0px 20px 82px 0px;
+  font-family: "Droid";
+  font-size: 25px;
+
+  -webkit-transition: all 500ms;
+  -moz-transition: all 500ms;
+  -o-transition: all 500ms;
+  transition: all 500ms;
+}
+
+@media (max-width: 450px) { /* Phones */
+  header nav ul li {
+    padding: 0px;
+    height: 50px;
+    width: 20%;
+  }
+}
+
+header nav ul li:hover a {
+  -webkit-transition: background-color 500ms;
+  -moz-transition: background-color 500ms;
+  -o-transition: background-color 500ms;
+  transition: background-color 500ms;
+  background-color: #1BBAEF;
+}
+
+@media (min-width: 451px) { /* Laptops and above */
+  header nav ul li:hover a {
+    -webkit-transition: padding 200ms;
+    -moz-transition: padding 200ms;
+    -o-transition: padding 200ms;
+    transition: padding 200ms;
+    padding: 10px 10px 82px 10px;
+  }
+}
+
+header nav ul li a {
+  float: left;
+  margin: 0px;
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  color: white;
+  text-decoration: none;
+  text-align: center;
+
+  -webkit-transition: all 500ms;
+  -moz-transition: all 500ms;
+  -o-transition: all 500ms;
+  transition: all 500ms;
+}
+
+@media (max-width: 450px) { /* Phones */
+  header nav ul li a {
+    padding: 0px 2px;
+  }
+}
+
+header nav ul li img {
+  width: 40px;
+  height: 40px;
+  margin: 5px 0px 0px 0px;
+}
+
+#contentArea {
+  margin: 130px auto 40px auto;
+  padding: 0px 5px;
+  width: 800px;
+  color: black;
+
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;;
+}
