--- a/css/main.css
+++ b/css/main.css
@@ -1,79 +1,76 @@
 body {
   margin: 0px;
   padding: 0px;
-  width: 100%;
-  height: 100%;
-  background-color: white;
-  color: white;
+  background-color: #1A1A1A;
+  color: #e01e69;
+}
+
+/* Conent */
+.content {
+  display: flex;
+  flex-flow: row wrap;
 }
 
 /* Header */
-header {
-  top: 0; /* Important for fixed header */
-  position: fixed;
-  width: 100%;
-  height: 120px;
-  box-shadow: 0px 2px 20px #000000;
-}
-
-@media (max-width: 450px) { /* Phones */
-  header {
-    position: relative;
-  }
-}
-
-header #logoArea {
-  position: fixed;
-  margin: 0px;
-  padding: 0px;
-  width: 30%;
-  height: 120px;
-  background-color: #1BBAEF;
-}
-
-@media (max-width: 450px) { /* Phones */
-  header #logoArea {
-    position: relative;
-    width: 100%;
-  }
-}
-
-header #logoArea h1 {
-  margin: 0px;
-  padding: 44px 0px;
-  text-align: center;
-  font-size: 32px;
-}
-
-header nav {
-  float: right;
-  margin: 0px;
-  padding: 0px;
-  width: 70%;
-  height: 120px;
+.content header {
+  order: 1;
+  flex: 0 1 30%;
+  display: flex;
+  height: 100px;
+  padding: 25px 0px;
   background-color: #242424;
 }
 
-@media (max-width: 450px) { /* Phones */
-  header nav {
-    float: left;
-    height: 50px;
-    width: 100%;
-  }
+.content header .logoArea {
+  order: 1;
+  flex: 1;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 100px;
 }
 
-header nav ul {
+.content header img {
+  order: 1;
+  margin: 10px;
+}
+
+.content header h1 {
+  order: 2;
+  font-size: 35px;
+}
+
+/* Navigation bar */
+.content nav {
+  order: 2;
+  flex: 0 0 70%;
+  align-self: flex-end;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100px;
+  padding: 25px 0px;
+  background-color: #242424;
+  overflow: hidden;
+}
+
+.content nav ul {
+  order: 1;
+  display: flex;
+  flex-flow: row nowrap;
+  list-style-type: none;
   margin: 0px;
   padding: 0px;
-  list-style-type: none;
 }
 
-header nav ul li {
-  float: left;
-  margin: 0px;
-  padding: 0px 20px 82px 0px;
+.content nav ul li {
+  margin: 100% 0px;
+  padding: 100% 0px;
   font-family: "Droid";
-  font-size: 25px;
+  cursor: pointer;
 
   -webkit-transition: all 500ms;
   -moz-transition: all 500ms;
@@ -81,39 +78,25 @@ header nav ul li {
   transition: all 500ms;
 }
 
-@media (max-width: 450px) { /* Phones */
-  header nav ul li {
-    padding: 0px;
-    height: 50px;
-    width: 20%;
-  }
-}
-
-header nav ul li:hover a {
+.content nav ul li:hover a {
   -webkit-transition: background-color 500ms;
   -moz-transition: background-color 500ms;
   -o-transition: background-color 500ms;
   transition: background-color 500ms;
-  background-color: #1BBAEF;
+  background-color: #323232;
+
+  -webkit-transition: padding 200ms;
+  -moz-transition: padding 200ms;
+  -o-transition: padding 200ms;
+  transition: padding 200ms;
+  padding: 100% 20px 100% 20px; /* Left and right padding stay the same */
 }
 
-@media (min-width: 451px) { /* Laptops and above */
-  header nav ul li:hover a {
-    -webkit-transition: padding 200ms;
-    -moz-transition: padding 200ms;
-    -o-transition: padding 200ms;
-    transition: padding 200ms;
-    padding: 10px 10px 82px 10px;
-  }
-}
-
-header nav ul li a {
-  float: left;
+.content nav ul a {
   margin: 0px;
-  padding: 10px;
-  width: 100%;
-  height: 100%;
-  color: white;
+  padding: 0px 20px; /* Bottom padding should be height of nav bar */
+  font-size: 25px;
+  color: #e01e69;
   text-decoration: none;
   text-align: center;
 
@@ -123,25 +106,82 @@ header nav ul li a {
   transition: all 500ms;
 }
 
-@media (max-width: 450px) { /* Phones */
-  header nav ul li a {
-    padding: 0px 2px;
-  }
+/* Main content */
+.content main {
+  order: 3;
+  flex: 0 1 100%;
+  z-index: 100;
+  display: flex;
+  flex-flow: column nowrap;
 }
 
-header nav ul li img {
-  width: 40px;
-  height: 40px;
-  margin: 5px 0px 0px 0px;
+.content main .videos {
+  order: 1;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: center;
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  list-style-type: none;
 }
 
-#contentArea {
-  margin: 130px auto 40px auto;
-  padding: 0px 5px;
-  width: 800px;
-  color: black;
+.content main .videos .video {
+  flex: 0; /* Prevents thumbnails from streching */
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+  color: white;
+  cursor: pointer;
+  background-color: #1F1F1F;
 
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;;
+  -webkit-transition: background-color 500ms;
+  -moz-transition: background-color 500ms;
+  -o-transition: background-color 500ms;
+  transition: background-color 500ms;
+}
+
+.content main .videos .video:hover {
+  -webkit-transition: background-color 200ms;
+  -moz-transition: background-color 200ms;
+  -o-transition: background-color 200ms;
+  transition: background-color 200ms;
+  background-color: #323232;
+}
+
+.content main .videos .video .link {
+  font-size: 20px;
+  text-decoration: none;
+  color: white;
+  height: 100%;
+  width: 100%;
+}
+
+.content main .videos .video .link .title {
+  margin: 5px;
+  padding: 0px;
+  width: 250px; /* Same as image width */
+  word-wrap: break-word;
+}
+
+.content main .videos .video .thumbnail {
+  margin: 0px;
+  padding: 0px;
+  width: 250px; /* Same as title width */
+  height: 150px;
+}
+
+/* Footer */
+.content footer {
+  order: 4;
+  height: 100px;
+  flex: 0 1 100%;
+  z-index: 100;
+}
+
+/* Kyle's DOM Testing */
+#add-video {
+  align-self: center;
+  border: 1px solid blue;
 }
