--- a/templates/about.html
+++ b/templates/about.html
@@ -20,13 +20,12 @@
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Videos</a></li>
                             <li><a href="#">Upload</a></li>
-                            <li><a href="{{ url_for('about') }}">About</a></li>
+                            <li><a href="about.html">About</a></li>
                         </ul>
                     </nav>
                 </div>
             </header>
-            <footer>
-              <p>The Tentacle Project &trade;</p>
+             
         </div>
     </body>
 </html>
