--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <title>{{ title }}</title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main_style.css') }}">
+        <meta charset="utf-8">
     </head>
 
     <body>
@@ -13,8 +13,12 @@
             </header>
 
             <main>
-                {% block main_content %}{% endblock %}
+              {% block main_content %}{% endblock %}
             </main>
+
+            <footer>
+              {% include 'footer.html' %}
+            </footer>
         </div>
     </body>
 </html>
