--- a/templates/header.html
+++ b/templates/header.html
@@ -1,13 +1,14 @@
 <div id="left-header">
-    <h1>Pr0nSite.com</h1>
+    <h1>Project Tentacles</h1>
 </div>
 
 <div id="right-header">
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="{{ url_for('index') }}">Home</a></li>
             <li><a href="#">Videos</a></li>
             <li><a href="#">Upload</a></li>
+            <li><a href="{{ url_for('about') }}">About</a></li>
         </ul>
     </nav>
 </div>
