Added temp main content for index page.

--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -10,7 +10,7 @@ body {
 }
 
 /* Header */
-#content header {
+#page-container header {
     height: 125px;
     width: 100%;
     min-width: 900px;
