--- a/templates/base.html
+++ b/templates/base.html
@@ -2,22 +2,23 @@
 <html>
     <head>
         <title>{{ title }}</title>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main_style.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main_style.css') }}">
+        {% block extra_stylesheets %}{% endblock %}
         <meta charset="utf-8">
     </head>
 
     <body>
-        <div id="content">
+        <div id="page-container">
             <header>
                 {% include 'header.html' %}
             </header>
 
             <main>
-              {% block main_content %}{% endblock %}
+                {% block main_content %}{% endblock %}
             </main>
 
             <footer>
-              {% include 'footer.html' %}
+                {% include 'footer.html' %}
             </footer>
         </div>
     </body>
