--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,21 @@
 {% extends 'base.html' %}
 
+{% block extra_stylesheets %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index_style.css') }}">
+{% endblock %}
+
 {% block main_content %}
-<p>Main content...</p>
+<div id="content">
+    <p>
+        fdklfjkfdsakfjaskl;fdsjkl;fjndskl;fjdkls;'fadskl;'fjdsakl;f;
+        fdsfkjdsfklasjl;fdsakl;fdsjl;fadjls;kfdsafdksjfadkls;j;lkf
+        fasdffdksjfkl;adsfjadsl;kfadlskfjadkls;fjadkls;f;djsalflk
+        dsffdsfadsfdsflfajksfadsjfkldsafjdskl;jf;klsf;kldsajfkl;asd
+        asfdkfjdskl;fjkls;adfadjkls;fjdkls;fjdskl;fjadsfkl;dsajadkls;
+        fadsfkdsjafkadjsflkjfadkls;jfkljdafkl;jdasklfj;aslfdsajklf;
+        fdsakfdsjkfkladjsklfjklads;jfklsdajfkls;dfjdkls;fj;lskfadls;jk
+        ffdjsaklfjdsaklfjdskl;fjdsfkl;adsjfdkls;jfdskl;fjl;kadsjlfj
+        sfdsakjfadsklfjaskl;fdsakljfdsakl;fj;dklsajfkldsaadfsjkl;
+    </p>
+</div>
 {% endblock %}
