--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -14,9 +14,13 @@ body {
     height: 125px;
     width: 100%;
     min-width: 900px;
-    box-shadow: 0px 5px 10px #888888;
+    box-shadow: 0px 5px 10px #000000;
 }
 
+body {
+    color: white;
+    background-color: #131313;
+}
 
 #left-header {
     float: left;
@@ -29,7 +33,6 @@ body {
     margin: 0;
     padding: 0;
     line-height: 125px;
-    color: white;
     font-family: overpass-light;
     font-size: 30px;
     text-align: center;
