--- a/tentacles/templates/header.html
+++ b/tentacles/templates/header.html
@@ -1,27 +1,10 @@
-<!--
-<div id="left-header">
-    <h1>Project Tentacles</h1>
-</div>
-
-<div id="right-header">
-    <nav>
-        <ul>
-            <li><a href="{{ url_for('index') }}">Home</a></li>
-            <li><a href="#">Videos</a></li>
-            <li><a href="#">Upload</a></li>
-            <li><a href="{{ url_for('about') }}">About</a></li>
-        </ul>
-    </nav>
-</div>
--->
-
-<h1>Project Tentacles</h1>
+<h1>The Tentacle Project</h1>
 
 <nav>
     <ul>
         <li><a href="{{ url_for('index') }}">Home</a></li>
         <li><a href="#">Videos</a></li>
-        <li><a href="#">Upload</a></li>
+        <li><a href="{{ url_for('upload') }}">Upload</a></li>
         <li><a href="{{ url_for('about') }}">About</a></li>
     </ul>
 </nav>
