Added an upload page.

--- a/tentacles/templates/index.html
+++ b/tentacles/templates/index.html
@@ -1,15 +1,5 @@
 {% extends 'base.html' %}
 
 {% block main_content %}
-<p>
-    fdklfjkfdsakfjaskl;fdsjkl;fjndskl;fjdkls;'fadskl;'fjdsakl;f;
-    fdsfkjdsfklasjl;fdsakl;fdsjl;fadjls;kfdsafdksjfadkls;j;lkf
-    fasdffdksjfkl;adsfjadsl;kfadlskfjadkls;fjadkls;f;djsalflk
-    dsffdsfadsfdsflfajksfadsjfkldsafjdskl;jf;klsf;kldsajfkl;asd
-    asfdkfjdskl;fjkls;adfadjkls;fjdkls;fjdskl;fjadsfkl;dsajadkls;
-    fadsfkdsjafkadjsflkjfadkls;jfkljdafkl;jdasklfj;aslfdsajklf;
-    fdsakfdsjkfkladjsklfjklads;jfklsdajfkls;dfjdkls;fj;lskfadls;jk
-    ffdjsaklfjdsaklfjdskl;fjdsfkl;adsjfdkls;jfdskl;fjl;kadsjlfj
-    sfdsakjfadsklfjaskl;fdsakljfdsakl;fj;dklsajfkldsaadfsjkl;
-</p>
+<h1 style="text-align: center">Featured Videos</h1>
 {% endblock %}
