--- a/tentacles/templates/index.html
+++ b/tentacles/templates/index.html
@@ -5,17 +5,11 @@
 {% endblock %}
 
 {% block main_content %}
-<div id="content">
-    <p>
-        fdklfjkfdsakfjaskl;fdsjkl;fjndskl;fjdkls;'fadskl;'fjdsakl;f;
-        fdsfkjdsfklasjl;fdsakl;fdsjl;fadjls;kfdsafdksjfadkls;j;lkf
-        fasdffdksjfkl;adsfjadsl;kfadlskfjadkls;fjadkls;f;djsalflk
-        dsffdsfadsfdsflfajksfadsjfkldsafjdskl;jf;klsf;kldsajfkl;asd
-        asfdkfjdskl;fjkls;adfadjkls;fjdkls;fjdskl;fjadsfkl;dsajadkls;
-        fadsfkdsjafkadjsflkjfadkls;jfkljdafkl;jdasklfj;aslfdsajklf;
-        fdsakfdsjkfkladjsklfjklads;jfklsdajfkls;dfjdkls;fj;lskfadls;jk
-        ffdjsaklfjdsaklfjdskl;fjdsfkl;adsjfdkls;jfdskl;fjl;kadsjlfj
-        sfdsakjfadsklfjaskl;fdsakljfdsakl;fj;dklsajfkldsaadfsjkl;
-    </p>
-</div>
+    {% for post in posts %}
+        <div class = "contentArea">
+            <h3> {{ post.title }} </h3>
+            <img src = " {{ post.thumbnailURL }} " alt = " {{ post.altText }} " />
+            <p> {{ post.description }} </p>
+        </div>
+    {% endfor %}
 {% endblock %}
