--- a/tentacles/templates/header.html
+++ b/tentacles/templates/header.html
@@ -3,8 +3,7 @@
 <nav>
     <ul>
         <li><a href="{{ url_for('index') }}">Home</a></li>
-        <li><a href="#">Videos</a></li>
-        <li><a href="{{ url_for('upload') }}">Upload</a></li>
         <li><a href="{{ url_for('about') }}">About</a></li>
+        <li><a href="{{ url_for('search') }}">Search</a></li>
     </ul>
 </nav>
